# LatteLong

./: CMakeLists.txt  README.md
cmake/: LatteLongConfig.cmake.in
include/Geometry/: Bounds.h  LatLng.h  LineString.h  MultiGeometry.h  Polygon.h
include/Graphics/Items/: GraphicsGroup.h  GraphicsItem.h  GraphicsLineString.h  GraphicsPath.h  GraphicsPixmap.h  GraphicsPolygon.h  GraphicsShape.h  LGraphicsItem.h  LGraphicsItem.hpp  LGraphicsLineString.h  LGraphicsLineString.hpp  LGraphicsPath.h  LGraphicsPath.hpp  LGraphicsPixmap.h  LGraphicsPolygon.h  LGraphicsPolygon.hpp  LGraphicsShape.h  LGraphicsShape.hpp  TypedGraphicsGroup.hpp
include/Graphics/View/: MapGraphicsScene.h  MapGraphicsScene.hpp  MapGraphicsView.h  MapGraphicsView.hpp
include/Latte/Geometry/: Bounds.h  LatLng.h  LineString.h  Polygon.h
include/Latte/Graphics/Items/: GraphicsGroup.h  GraphicsItem.h  GraphicsLineString.h  GraphicsPath.h  GraphicsPixmap.h  GraphicsPolygon.h  TypedGraphicsGroup.hpp
include/Latte/Graphics/View/: MapGraphicsScene.h  MapGraphicsView.h
include/Latte/Projection/: GeometryConvertor.h  IProjection.hpp  LocalCoordinateSystem.h  Mercator.h  SimpleProjection.h  SphericalMercator.h
include/Latte/Providers/: GeoJsonProvider.h  VectorProvider.h
include/Projection/: GeometryConvertor.h  IProjection.hpp  Mercator.h  Mercator.hpp  SimpleProjection.h  SimpleProjection.hpp  SphericalMercator.h  SphericalMercator.hpp
include/Providers/: GeoJsonProvider.h  VectorProvider.h
include/Structs/: Bounds.hpp  LatLng.h  LatLng.hpp  LineString.h  LineString.hpp  Polygon.h  Polygon.hpp
src/: main.cpp
src/Geometry/: LatLng.cpp  LineString.cpp  MultiGeometry.cpp  Polygon.cpp
src/Graphics/Items/: GraphicsGroup.cpp  GraphicsItem.cpp  GraphicsLineString.cpp  GraphicsPath.cpp  GraphicsPixmap.cpp  GraphicsPolygon.cpp  GraphicsShape.cpp  LGraphicsItem.cpp  LGraphicsLineString.cpp  LGraphicsPath.cpp  LGraphicsPixmap.cpp  LGraphicsPolygon.cpp  LGraphicsShape.cpp
src/Graphics/View/: MapGraphicsScene.cpp  MapGraphicsView.cpp
src/Latte/Geometry/: Bounds.cpp  LatLng.cpp  LineString.cpp  MultiGeometry.cpp  Polygon.cpp
src/Latte/Graphics/Items/: GraphicsGroup.cpp  GraphicsItem.cpp  GraphicsLineString.cpp  GraphicsPath.cpp  GraphicsPixmap.cpp  GraphicsPolygon.cpp  GraphicsShape.cpp
src/Latte/Graphics/View/: MapGraphicsScene.cpp  MapGraphicsView.cpp
src/Latte/Projection/: GeometryConvertor.cpp  LocalCoordinateSystem.cpp  Mercator.cpp  SimpleProjection.cpp  SphericalMercator.cpp
src/Latte/Providers/: GeoJsonProvider.cpp  VectorProvider.cpp
src/Projection/: GeometryConvertor.cpp  Mercator.cpp  SimpleProjection.cpp  SphericalMercator.cpp
src/Providers/: GeoJsonProvider.cpp  VectorProvider.cpp
src/Structs/: Bounds.cpp
tests/: CMakeLists.txt  ProjComboBox.hpp  example_window.cpp  geojson_viewer.cpp  simple_dataset.hpp
